Continue testing for bugs!
- We need to check tests 9 and up! (9 - 14)

--- a/a1/makefile
+++ b/a1/makefile
@@ -1,6 +1,6 @@
 # include Werror later
 all: 		
-	gcc -g -Wall -o test list.c charList.c test.c 
+	gcc -g -Wall -o test list.c testDriver.c  
 
 clean:
 	rm test
