Finish List monitor structure
- Added condition variables and mutexes to access list data
- Will need to implement mutltithreading sometime soon
- yes

--- a/a2/makefile
+++ b/a2/makefile
@@ -1,6 +1,6 @@
 # include Werror later
 all: 		
-	gcc -g -Wall -o s-talk -pthread listMonitor.c
+	gcc -g -Wall -o s-talk -pthread main.c listMonitor.c list.c
 
 clean:
 	rm s-talk
