Create function to setup talking UDP
- Need to create one for listening
- Will also need to figure out a way to shutdown program

--- a/a2/makefile
+++ b/a2/makefile
@@ -1,6 +1,6 @@
 # include Werror later
 all: 		
-	gcc -g -Wall -o s-talk -pthread listMonitor.c listMonitorTest.c list.c
+	gcc -g -Wall -o s-talk -pthread listMonitor.c main.c list.c
 
 clean:
 	rm s-talk
