--- a/a2/makefile
+++ b/a2/makefile
@@ -1,6 +1,8 @@
-# include Werror later
+
 all: 		
 	gcc -g -Wall -o s-talk -pthread listMonitor.c main.c list.c
-
+#	gcc -g -Wall -o testMonitor -pthread listMonitor.c listMonitorTest.c list.c 
+# 			^^ Uncomment to test listMonitor ^^ 
 clean:
 	rm s-talk
+#	rm testMonitor
