--- a/a3/makefile
+++ b/a3/makefile
@@ -1,6 +1,6 @@
 # include Werror later
 all: 		
-	gcc -g -Wall -o test list.c main.c  
+	gcc -g -Wall -o test list.c main.c processes.c
 
 clean:
 	rm test
