Add testDriver for testing
- Tested semaphores
- Need to test send/receive/reply
- Need to test to see if we can get output of success/failure
- Need to build UI

--- a/a3/makefile
+++ b/a3/makefile
@@ -1,6 +1,6 @@
 # include Werror later
 all: 		
-	gcc -g -Wall -o test list.c main.c processes.c semaphores.c commands.c
+	gcc -g -Wall -o test list.c testDriver.c processes.c semaphores.c commands.c
 
 clean:
 	rm test
